[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://Objects/UI/red_button02.png" type="Texture" id=3]
[ext_resource path="res://Objects/UI/red_button01.png" type="Texture" id=4]
[ext_resource path="res://Objects/UI/red_button00.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 347.0
margin_top = 165.0
margin_right = 676.0
margin_bottom = 434.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 329.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "SolarPunk"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 329.0
margin_bottom = 269.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 69.0
margin_right = 259.0
margin_bottom = 192.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 190.0
margin_bottom = 45.0

[node name="continue" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_right = 190.0
margin_bottom = 45.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 50.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "continue"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 49.0
margin_right = 190.0
margin_bottom = 94.0

[node name="save" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_right = 190.0
margin_bottom = 45.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 37.0
margin_top = 10.0
margin_right = 152.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
text = "save game"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 98.0
margin_right = 190.0
margin_bottom = 143.0

[node name="load" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_right = 190.0
margin_bottom = 45.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_left = 41.0
margin_top = 10.0
margin_right = 149.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 4 )
text = "load game"

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 147.0
margin_right = 190.0
margin_bottom = 192.0

[node name="exit" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_right = 190.0
margin_bottom = 45.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5"]
margin_left = 76.0
margin_top = 10.0
margin_right = 114.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5/exit" to="." method="_on_exit_pressed"]
